Scale animation added to left eye

--- a/app/src/main/res/drawable/vector_robot.xml
+++ b/app/src/main/res/drawable/vector_robot.xml
@@ -57,6 +57,12 @@
       android:strokeColor="#00000000"
       android:fillAlpha="1"
       android:strokeLineCap="round"/>
+
+  <group android:name="leftEyeGroup"
+      android:pivotX="100"
+      android:pivotY="80"
+      >
+
   <path
       android:pathData="M96.003,81.576a7.5,7.143 0,1 0,15 0a7.5,7.143 0,1 0,-15 0z"
       android:strokeAlpha="1"
@@ -67,7 +73,9 @@
       android:fillAlpha="1"
       android:strokeLineCap="round"/>
 
-  <group android:name="eyeGroup">
+  </group>
+
+  <group android:name="rightEyeGroup">
 
   <path
       android:pathData="M168.003,81.576a7.5,7.143 0,1 0,15 0a7.5,7.143 0,1 0,-15 0z"
@@ -81,6 +89,11 @@
 
   </group>
 
+  <group android:name="mouthGroup"
+      android:pivotX="150"
+      android:pivotY="100"
+      >
+
   <path
       android:pathData="m156.578,93.777c-1.421,14.713 -32.43,15.287 -34.286,0"
       android:strokeAlpha="1"
@@ -90,6 +103,8 @@
       android:strokeColor="#000000"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
+  </group>
+
   <path
       android:pathData="M83.271,99.355a5.89,3.017 0,1 0,11.779 0a5.89,3.017 0,1 0,-11.779 0z"
       android:strokeAlpha="1"
