--- a/app/src/main/res/animator/scale.xml
+++ b/app/src/main/res/animator/scale.xml
@@ -7,11 +7,13 @@
     android:propertyName="scaleX"
     android:valueFrom="0"
     android:valueTo="1"
+    android:interpolator="@android:anim/bounce_interpolator"
     android:valueType="floatType"/>
 <objectAnimator
     android:duration="500"
     android:propertyName="scaleY"
     android:valueFrom="0"
     android:valueTo="1"
+    android:interpolator="@android:anim/bounce_interpolator"
     android:valueType="floatType"/>
 </set>
