--- a/app/src/main/res/animator/translate.xml
+++ b/app/src/main/res/animator/translate.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:ordering="sequentially">
 
     <objectAnimator
-        android:duration="1500"
+        android:duration="1000"
+        android:startOffset="1500"
+        android:propertyName="translateY"
+        android:valueFrom="0"
+        android:valueTo="-20" />
+
+    <objectAnimator
+        android:duration="1000"
         android:interpolator="@android:anim/bounce_interpolator"
         android:propertyName="translateY"
         android:valueFrom="-20"
         android:valueTo="0" />
-
 
 </set>
