--- a/app/src/main/res/drawable/vector_robot_animated.xml
+++ b/app/src/main/res/drawable/vector_robot_animated.xml
@@ -10,4 +10,9 @@
         android:animation="@animator/scale"
         android:name="leftEyeGroup" />
 
+    <target
+        android:animation="@animator/rotate"
+        android:name="headGroup" />
+
+
 </animated-vector>
